// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /osc/commands/status should respond with results 1`] = `
{
  "name": "camera.takePicture",
  "results": {
    "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  },
  "state": "done",
}
`;

exports[`THETA X POST /osc/commands/status should respond with results 1`] = `
{
  "name": "camera.takePicture",
  "results": {
    "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  },
  "state": "done",
}
`;

exports[`THETA Z1 POST /osc/commands/status should respond with results 1`] = `
{
  "name": "camera.takePicture",
  "results": {
    "fileUrl": StringMatching /\\^\\(http\\|https\\):\\\\/\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\/\\.\\+\\\\\\.JPG/,
  },
  "state": "done",
}
`;
